--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,15 @@ endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.21.jar=/home/amr/Downloads/jar_files/mysql-connector-java-8.0.21.jar
 file.reference.mysql-connector-java-8.0.21.jar-1=/home/gehad/Downloads/mysql-connector-java-8.0.21.jar
+file.reference.mysql-connector-java-8.0.21.jar-2=/home/amr/Downloads/jar_files/mysql-connector-java-8.0.21.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.21.jar}:\
-    ${file.reference.mysql-connector-java-8.0.21.jar-1}
+    ${file.reference.mysql-connector-java-8.0.21.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.21.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
